--- a/src/Resources/views/page.html.twig
+++ b/src/Resources/views/page.html.twig
@@ -1,1 +1,7 @@
-hello world
+{% extends 'layout.html.twig' %}
+
+{% block content %}
+    <div class="col-xs-12 page-container">
+    </div>
+{% endblock %}
+
