--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -11,6 +11,7 @@
     <title>EveCompare</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:500' rel='stylesheet' type='text/css'>
     <link href="/bower/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="bower/ladda/dist/ladda-themeless.min.css">
     <link href="/bower/fontawesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
 
@@ -33,8 +34,11 @@
 
     <script src="/bower/jquery/dist/jquery.min.js"></script>
     <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower/ladda/dist/spin.min.js"></script>
+    <script src="bower/ladda/dist/ladda.min.js"></script>
     <script src="/bower/lodash/lodash.min.js"></script>
     <script src="/bower/angularjs/angular.min.js"></script>
+    <script src="bower/angular-ladda/dist/angular-ladda.min.js"></script>
 
     {% block javascripts %}
     {% endblock %}
