--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>EveCompare</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:500' rel='stylesheet' type='text/css'>
     <link href="/bower/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="bower/ladda/dist/ladda-themeless.min.css">
     <link href="/bower/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="bower/nvd3/build/nv.d3.css">
     <link href="/css/main.css" rel="stylesheet">
 
 
@@ -36,9 +36,12 @@
     <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower/ladda/dist/spin.min.js"></script>
     <script src="bower/ladda/dist/ladda.min.js"></script>
+    <script src="bower/d3/d3.js"></script>
+    <script src="bower/nvd3/build/nv.d3.js"></script>
     <script src="/bower/lodash/lodash.min.js"></script>
     <script src="/bower/angularjs/angular.min.js"></script>
     <script src="bower/angular-ladda/dist/angular-ladda.min.js"></script>
+    <script src="bower/angular-nvd3/dist/angular-nvd3.js"></script>
 
     {% block javascripts %}
     {% endblock %}
