--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -12,6 +12,7 @@
     <link href="/bower/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="bower/ladda/dist/ladda-themeless.min.css">
     <link href="/bower/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/bower/spinkit/css/spinkit.css" rel="stylesheet">
     <link rel="stylesheet" href="bower/nvd3/build/nv.d3.css">
     <link href="/css/main.css" rel="stylesheet">
 
