adds ladda submit to button loading

--- a/src/Resources/views/page.html.twig
+++ b/src/Resources/views/page.html.twig
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12">
-                    <button ng-disabled="itemForm.$valid === false" class="btn btn-primary btn-block" type="submit">Search</button>
+                    <button ladda="loading_submit" ng-disabled="itemForm.$valid === false" class="btn btn-primary btn-block" type="submit">Search</button>
                 </div>
             </form>
 
